<resources>
    <string name="app_name">FirstAssignment</string>
    <string name="hello_user">Hello USER!</string>
    <string name="userid">UserID</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="next">NEXT</string>
</resources>
